--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <meta charset="UTF-8">
     <title>Portfolio: Alina Vo</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<!-- header -->
+    <div class="header">
+
+        <div id="name">
+            <h1>Alina Vo</h1>
+        </div>
+
+<!-- links of top right corner-->
+        <div id="links"> 
+            <a href"#" >About</a>
+            <a href"#" >Portfolio</a>
+            <a href"#" >Contact</a>
+        </div>
+
+    </div>
+
 </head>
 
 <body>
-<!-- header -->
-<div class="header">
 
-        <h1>Alina Vo</h1>
-
-     <!-- links of top right corner PUT IN HEADER-->
-        <div class="links"> 
-    
-        <a href"#" >About</a>
-        <a href"#" >Portfolio</a>
-        <a href"#" >Contact</a>
-        
-        </div>
-
-</div>
 
 
 
