portflio text added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="header">
 
         <section id="name">
-            <h1>Alina Vo</h1>
+            <h1>Alina Vo</1>
         </section>
 
 <!-- links of top right corner-->
