--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="header">
 
         <section id="name">
-            <h1>Alina Vo</1>
+            <h1>Alina Vo</h1>
         </section>
 
 <!-- links of top right corner-->
@@ -47,13 +47,13 @@
     <div class="clearfix">
         <div class="me">
         <p>
-            Text About Me Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cupiditate inventore voluptatem adipisci deleniti dolores quod quam quisquam, a quos non? Dolore dicta sequi architecto incidunt! Animi sint magni non!
+                She was born on a sunny Friday in May in 1992. Growing up in on farmland of Muncy, Pennsylvania (population of 2,500), she enjoyed living the small town life. After graduating high school, she went on to Ursinus College (Collegeville, Pennsylvania) to study Chemistry and Spanish. She then accepted a Chemist position at Philadelphia Energy Solutions upon graduation. 
         </p>
-        <p>   
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, quas! Quam, rem fugiat accusantium cumque, itaque ullam, sequi illum recusandae blanditiis error molestias delectus nisi nobis provident et explicabo dicta?
-        </p>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus beatae earum labore illo, voluptatum, veritatis aspernatur explicabo nulla tenetur ipsum est itaque perspiciatis, ex illum. Minus sapiente quo pariatur error!
+        <br>
+    <p>
+                She now currently resides in the Graduate Hospital neighborhood of Philadelphia with her two roommates. She spends her free time volunteering in STEM education teaching science to kids in elementary schools with low funding. She also loves to read Harry Potter and is an avid Philadelphia Eagles fan. 
+                
+
         </p>
     </div>
 </div>
@@ -70,7 +70,7 @@
 <footer>
 <div class="footer">
  
-    <h6>Copyright</h6>
+    <h6>Copyright &copy;</h6>
  
 </div>
 </footer>
