--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,8 @@
         </div>
 
 <div class="mainbox">
-
+        <h2>   Portfolio</h2>
+    
     <div class="row">
             <div class="hangman">
                       <img src="assets/images/hangman.png" alt="Hangman" >
