--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+
 <html lang="en-us">
 
 <head>
@@ -48,9 +48,10 @@
                 </div>
 
                 <div class="rpg">
-                    <img src="assets/images/rpg.png" alt="RPG Game">
+                    <a href="https://alinavo.github.io/unit-4-game/" target="_blank">
+                    <img src="assets/images/horcrux.png" alt="Horcrux Collector">
                     <div class="text-block">
-                        <h4>RPG Game</h4>
+                        <h4>Horcrux Collector</h4>
                     </div>
                     </a>
                 </div>
