--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+
 <html lang="en-us">
 
 
 <head>
     <meta charset="UTF-8">
     <title>Contact: Alina Vo</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
