added trivia game image

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
         <div class="row2">
             <div class="trivia">
 
-                <img src="assets/images/trivia.png" alt="Trivia Game">
+                <img src="assets/images/triviagame.png" alt="Trivia Game">
                 <div class="text-block">
                     <h4>Trivia</h4>
                 </div>
