added Giftastic to portfoilio

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,8 @@
             </div>
 
             <div class="rutgers">
-                <img src="assets/images/widget.png" alt="Rutgers Info Widget">
+                    <a href="https://alinavo.github.io/GifTastic/" target="_blank">
+                <img src="assets/images/giftastic.png" alt="GifTastic!">
                 <div class="text-block">
                     <h4>Rutgers Info Widget</h4>
                 </div>
